apps/local/arr/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:release-1.10.5.4116
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 9696
              scheme: HTTP
          volumeMounts:
            - mountPath: /config
              name: prowlarr-data
      volumes:
        - name: prowlarr-data
          persistentVolumeClaim:
            claimName: prowlarr-pvc
